<resources>
    <string name="app_name">FootballApps</string>

    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="create_account">Create New Account?</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="notification_title">Next Macth</string>
    <string name="scores">Scores</string>
    <string name="favorites">Favorites</string>
    <string name="search">Search</string>
    <string name="home">Home</string>

    <string-array name="list_team">
        <item>Nama</item>
    </string-array>
</resources>
