<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
            android:id="@+id/homeFragment"
            android:enabled="true"
            android:icon="@drawable/ic_home"
            android:title="@string/home"
            app:showAsAction="ifRoom" />
    <item
            android:id="@+id/scoresFragment"
            android:enabled="true"
            android:icon="@drawable/ic_score"
            android:title="@string/scores"
            app:showAsAction="ifRoom" />
    <item
            android:id="@+id/bottomFavorite"
            android:enabled="true"
            android:icon="@drawable/ic_favorite"
            android:title="@string/favorites"
            app:showAsAction="ifRoom" />
    <item
            android:id="@+id/bottomSearch"
            android:enabled="true"
            android:icon="@drawable/ic_explore"
            android:title="@string/search"
            app:showAsAction="ifRoom" />
</menu>